fixed lang attribute

--- a/league/templates/index.html
+++ b/league/templates/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="de-DE">
 <head>
   <title>{{locales.global.title}}</title>
   <meta charset="UTF-8" />
-  <meta name="language" content="de-DE" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="viewport" content="width=1024, user-scalable=0, target-densitydpi=device-dpi" />
@@ -27,6 +26,7 @@
     <header>
       <h1 id="logo"><a href="#!/live">{{locales.global.title}}</a></h1>
       <nav id="metanav">
+        <a href="#!/guide"  >{{locales.index.metanav.guide}}</a>
         <a href="http://digitalfoosball.com/" class="js_target">{{locales.index.metanav.info}}</a>
       </nav>
       <nav id="mainnav">
