added locale field

--- a/league/templates/index.html
+++ b/league/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de-DE">
+<html lang="{{locales.locale}}">
 <head>
   <title>{{locales.global.title}}</title>
   <meta charset="UTF-8" />
