--- a/league/extensions/css/basic.less
+++ b/league/extensions/css/basic.less
@@ -153,7 +153,7 @@ header{
 			&::after{
 				content:"|";
 				position: relative;
-				right:-8px;
+				right:-11px;
 			}
 			&:last-child{
 				&::after{
@@ -205,6 +205,7 @@ header{
 	margin: 0 auto;
 	aside{
 		-webkit-transform: translate3d(0,0,0);
+		margin: 0 0 50px;
 		#s2k-box > .border;
 	}
 	bside{
