added settings html, css  and javascript

--- a/mobileapp/public/extensions/css/scoreboard.less
+++ b/mobileapp/public/extensions/css/scoreboard.less
@@ -2,10 +2,16 @@
     .toolbar{
         a{
             #s2k-transition-time > .led();
-        }
-        a.hide{
-            opacity: 0;
-            cursor: default;
+            &.hide{
+                opacity: 0;
+                cursor: default;
+            }
+            &.undo{
+                left:50px;
+            }
+            &.settings{
+                font-size: 20px;
+            }
         }
     }
     .msg{
@@ -32,7 +38,42 @@
 			text-align: center;
 		}
 	}
-	
+
+	> .settings{
+	    opacity: 0;
+        position: absolute;
+        top:0;
+        right:0;
+        left:0;
+        #s2k-transition-time > .led();
+	    a{
+	        position: absolute;
+	        font-size: 25px;
+	        &.change{
+                top:250px;
+                left:50%;
+                margin: 0 0 0 -20px;
+	        }
+	        &.plus{
+	            top:127px;
+	        }
+	        &.minus{
+	            top:187px;
+	        }
+	        &.home{
+	            right:50%;
+	            margin: 0 156px 0 0;
+	        }
+	        &.visitors{
+	            left:50%;
+	            margin: 0 0 0 156px;
+	        }
+	    }
+	}
+	> .settings.active{
+	    opacity: 1;
+	}
+
 	.scorecard{
 		position: absolute;
 		width:70px;
@@ -347,7 +388,7 @@
 			}
 		}
 	}
-	
+
     .scorecard#scorehome,
     .board.inverted .scorecard#scorevisitors{
         left:60px;
@@ -361,7 +402,7 @@
             right:-66px;
         }
     }
-    
+
     .scorecard#scorevisitors,
     .board.inverted .scorecard#scorehome{
         left:260px;
@@ -376,7 +417,7 @@
         }
     }
 
-	
+
 	.players{
         display:none;
 	}
@@ -385,6 +426,21 @@
 
 @media only screen and/*!yui*/(orientation:portrait){
 	#scoreboard{
+	    .toolbar{
+	        a{
+                &.settings{
+                    display: none;
+                }
+                &.undo{
+                    left:auto;
+                }
+            }
+	    }
+
+	    > .settings{
+	        display: none;
+	    }
+
 		.board{
 			width: 300px;
         }
@@ -416,7 +472,7 @@
                 right:117px;
             }
         }
-            
+
 		.players{
 		    clear:both;
             width: 200px;
@@ -478,7 +534,7 @@
                     > div{
                         background-image: url("../../images/elements/el_jersey_black.svg");
                     }
-                    
+
                 }
             }
             &.opponents2{
