disabled toolbar buttons on settings page

--- a/mobileapp/public/extensions/css/scoreboard.less
+++ b/mobileapp/public/extensions/css/scoreboard.less
@@ -11,6 +11,10 @@
             }
             &.settings{
                 font-size: 20px;
+				&.cancel ~ a {
+				    opacity: 0;
+				    pointer-events:none;
+				}
             }
         }
     }
