new grid layout  'solo'

--- a/league/extensions/css/basic.less
+++ b/league/extensions/css/basic.less
@@ -203,6 +203,9 @@ header{
 	position: relative;
 	width: 635px;
 	margin: 0 auto;
+    &.solo{
+        width: 635px;
+    }
 	aside{
 		-webkit-transform: translate3d(0,0,0);
 		margin: 0 0 50px;
