--- a/league/extensions/css/league.less
+++ b/league/extensions/css/league.less
@@ -9,6 +9,6 @@
 @import "home";
 @import "ligatable";
 @import "userdetail";
-@import "guide";
+@import "text";
 //@import "scrollbar";
 @import "keyframes.css";
