--- a/league/extensions/css/home.less
+++ b/league/extensions/css/home.less
@@ -111,6 +111,7 @@
 					border-bottom: 1px solid @s2k-line-darkgrey;
 					line-height: 18px;
 					width: 100%;
+                    background: url("../../images/icons/ic_feedevents.svg") no-repeat 0 0;
 					div{
 					    display: table-cell;
 					    width: 140px;
@@ -127,17 +128,20 @@
 							font-weight: bold;
 						}
 					}
-					&.goal,
-					&.start,
-          &.end{
-    				    background: url("../../images/icons/ic_feedevents.svg") no-repeat 0 0;
+					&.start{
+					    background-position: 25px -55px;
 					}
 					&.goal{
-					    background-position: -4px 25px;
+					    background-position: 24px -150px;
 					}
-					&.start,
-          &.end{
-					    background-position: 25px -55px;
+					&.foul{
+					    background-position: 24px -225px;
+					}
+					&.abort{
+					    background-position: 29px -330px;
+					}
+					&.end{
+					    background-position: 24px -237px;
 					}
 					&:last-child{
 						border: none;
