Updated the structure of the couch-documents. Now there is a document for each player to optimize the performance

--- a/league/templates/table.html
+++ b/league/templates/table.html
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-        {{#table}}
+        {{#players}}
           <tr>
             <td>{{#position}}{{position}}.{{/position}}</td>
             <td><a href="#!/statistic/{{name}}">{{name}}</a></td>
@@ -28,7 +28,7 @@
               <td>{{lost}}</td>
             {{/games}}
           </tr>
-        {{/table}}
+        {{/players}}
       </tbody>
     </table>
   </aside>
