--- a/league/templates/index.html
+++ b/league/templates/index.html
@@ -26,8 +26,9 @@
     <header>
       <h1 id="logo"><a href="#!/live">{{locales.global.title}}</a></h1>
       <nav id="metanav">
-        <a href="#!/guide"  >{{locales.index.metanav.guide}}</a>
+        <a href="#!/guide">{{locales.index.metanav.guide}}</a>
         <a href="http://digitalfoosball.com/" class="js_target">{{locales.index.metanav.info}}</a>
+        <a href="#!/tos">{{locales.index.metanav.tos}}</a>
       </nav>
       <nav id="mainnav">
         <a href="#!/live">{{locales.index.mainnav.live}}</a>
