commented out the dummybadges pending further badge development

--- a/league/templates/table.html
+++ b/league/templates/table.html
@@ -1,4 +1,4 @@
-<section id="content" class="league">
+<section id="content" class="league solo">
   <aside>
     <h2 class="h1">{{locales.table.league}}</h2>
     <table>
@@ -32,7 +32,7 @@
       </tbody>
     </table>
   </aside>
-  <bside>
+<!--   <bside>
     <h2 class="h1">{{locales.table.league.col.header.badges}}</h2>
     <ul>
       <li class="hunter">
@@ -66,5 +66,5 @@
         <p>@s2kicker  |  17.05.2011</p>
       </li>
     </ul>
-  </bside>
+  </bside> -->
 </section>
