--- a/league/extensions/css/keyframes.css
+++ b/league/extensions/css/keyframes.css
@@ -22,157 +22,97 @@
 @-webkit-keyframes slideInScoreBoard {
 	0% {
 	    opacity: 0;
-	    height:0;
-	    margin-bottom: 0;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
+        -webkit-transform: scale(0);
 	}
 	100% {
 	    opacity: 1;
+        -webkit-transform: scale(1);
 	}
 }
 @-moz-keyframes slideInScoreBoard {
 	0% {
 	    opacity: 0;
-	    height:0;
-	    margin-bottom: 0;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
+        -moz-transform: scale(0);
 	}
 	100% {
 	    opacity: 1;
+        -moz-transform: scale(1);
 	}
 }
 @-o-keyframes slideInScoreBoard {
 	0% {
 	    opacity: 0;
-	    height:0;
-	    margin-bottom: 0;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
+        -o-transform: scale(0);
 	}
 	100% {
 	    opacity: 1;
+        -o-transform: scale(1);
 	}
 }
 @-ms-keyframes slideInScoreBoard {
 	0% {
 	    opacity: 0;
-	    height:0;
-	    margin-bottom: 0;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
+        -ms-transform: scale(0);
 	}
 	100% {
 	    opacity: 1;
+        -ms-transform: scale(1);
 	}
 }
 @keyframes slideInScoreBoard {
 	0% {
 	    opacity: 0;
-	    height:0;
-	    margin-bottom: 0;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
+        transform: scale(0);
 	}
 	100% {
 	    opacity: 1;
+        transform: scale(1);
 	}
 }
 
 @-webkit-keyframes slideOutScoreBoard {
 	0% {
 	    opacity: 1;
-	    height:287px;
-	    margin-bottom: 30px;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
 	}
 	100% {
-	    height: 0;
-	    margin-bottom: 0;
+	    opacity: 0;
+	    -webkit-transform: scale(0);
 	}
 }
 @-moz-keyframes slideOutScoreBoard {
 	0% {
 	    opacity: 1;
-	    height:287px;
-	    margin-bottom: 30px;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
 	}
 	100% {
-	    height: 0;
-	    margin-bottom: 0;
+	    opacity: 0;
+	    -moz-transform: scale(0);
 	}
 }
 @-o-keyframes slideOutScoreBoard {
 	0% {
 	    opacity: 1;
-	    height:287px;
-	    margin-bottom: 30px;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
 	}
 	100% {
-	    height: 0;
-	    margin-bottom: 0;
+	    opacity: 0;
+	    -o-transform: scale(0);
 	}
 }
 @-ms-keyframes slideOutScoreBoard {
 	0% {
 	    opacity: 1;
-	    height:287px;
-	    margin-bottom: 30px;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
 	}
 	100% {
-	    height: 0;
-	    margin-bottom: 0;
+	    opacity: 0;
+	    -ms-transform: scale(0);
 	}
 }
 @keyframes slideOutScoreBoard {
 	0% {
 	    opacity: 1;
-	    height:287px;
-	    margin-bottom: 30px;
-	}
-	50% {
-	    opacity: 0;
-	    height: 287px;
-	    margin-bottom: 30px;
 	}
 	100% {
-	    height: 0;
-	    margin-bottom: 0;
+	    opacity: 0;
+	    transform: scale(0);
 	}
 }
 
