--- a/league/extensions/css/home.less
+++ b/league/extensions/css/home.less
@@ -13,27 +13,19 @@
 	aside{
 	    position: relative;
 	    padding: 30px 0 0;
-        -webkit-transform-style: preserve-3d;
-        -webkit-perspective: 400;
+        #s2k-transform-style > .preserve3d();
+        #s2k-perspective > .default();
         &.showboard{
             #game{
-                -webkit-animation:slideInScoreBoard 1s ease-out 0s 1 alternate forwards;
-                -moz-animation:slideInScoreBoard 1s ease-out 0s 1 alternate forwards;
-                -o-animation:slideInScoreBoard 1s ease-out 0s 1 alternate forwards;
-                -ms-animation:slideInScoreBoard 1s ease-out 0s 1 alternate forwards;
-                animation:slideInScoreBoard 1s ease-out 0s 1 alternate forwards;
+                #s2k-animation > .generic(showBoard 1s ease-out 0s 1 alternate forwards);
             }
             #feed{
-                -webkit-transform: translate3d(0,317px,0);
+                #s2k-transform > .generic(~"translate3d(0,317px,0)");
             }
         }
         &.hideboard{
             #game{
-                -webkit-animation:slideOutScoreBoard .8s ease-out 0 1 normal forwards;
-                -moz-animation:slideOutScoreBoard .8s ease-out 0 1 normal forwards;
-                -o-animation:slideOutScoreBoard .8s ease-out 0 1 normal forwards;
-                -ms-animation:slideOutScoreBoard .8s ease-out 0 1 normal forwards;
-                animation:slideOutScoreBoard .8s ease-out 0 1 normal forwards;
+                #s2k-animation > .generic(hideBoard .8s ease-out 0 1 normal forwards);
             }
         }
 		#game{
@@ -45,7 +37,7 @@
             opacity: 0;
             height:287px;
             background: @s2k-box-grey;
-            -webkit-transform-origin: 50% 0;
+            #s2k-transform-origin > .generic(50% 0);
 			time{
 				position: absolute;
 				top:-30px;
