--- a/league/extensions/css/vars.less
+++ b/league/extensions/css/vars.less
@@ -41,7 +41,7 @@
 		transition: @style @timer;
 	}
 	.long(){
-		@timer:1s 0s;
+		@timer:1s;
 		-webkit-transition: @style @timer;
 		-moz-transition: @style @timer;
 		-o-transition: @style @timer;
@@ -96,16 +96,66 @@
 	}
 }
 
-#s2k-transform {
-	.lightbox(){
-		@transform:scale(0);
-		-webkit-transform: @transform;
-		-moz-transform: @transform;
-		-o-transform: @transform;
-		-ms-transform: @transform;
-		transform: @transform;
+#s2k-animation {
+	.generic(@animation){
+        -webkit-animation:@animation;
+        -moz-animation:@animation;
+        -o-animation:@animation;
+        -ms-animation:@animation;
+        animation:@animation;
 	}
 }
+
+
+#s2k-transform {
+	.generic(@val){
+		-webkit-transform: @val;
+		-moz-transform: @val;
+		-o-transform: @val;
+		-ms-transform: @val;
+		transform: @val;
+	}
+
+	.lightbox(@val:scale(0)){
+		-webkit-transform: @val;
+		-moz-transform: @val;
+		-o-transform: @val;
+		-ms-transform: @val;
+		transform: @val;
+	}
+
+}
+
+#s2k-transform-origin {
+	.generic(@val){
+		-webkit-transform-origin: @val;
+		-moz-transform-origin: @val;
+		-o-transform-origin: @val;
+		-ms-transform-origin: @val;
+		transform-origin: @val;
+	}
+}
+
+#s2k-transform-style {
+	.preserve3d(@val:~"preserve-3d"){
+		-webkit-transform-style: @val;
+		-moz-transform-style: @val;
+		-o-transform-style: @val;
+		-ms-transform-style: @val;
+		transform-style: @val;
+	}
+}
+
+#s2k-perspective {
+	.default(@val:400){
+		-webkit-perspective: @val;
+		-moz-perspective: @val;
+		-o-perspective: @val;
+		-ms-perspective: @val;
+		perspective: @val;
+	}
+}
+
 
 #s2k-shadow {
 	.none{
@@ -247,29 +297,26 @@
 		}
 	}
 
-	.box-flex-none{
-		@value:0;
-		-webkit-box-flex: @value;
-		-moz-box-flex: @value;
-		-o-box-flex: @value;
-		-ms-box-flex: @value;
-		box-flex: @value;
+	.box-flex-none(@val:0){
+		-webkit-box-flex: @val;
+		-moz-box-flex: @val;
+		-o-box-flex: @val;
+		-ms-box-flex: @val;
+		box-flex: @val;
 	}
-	.box-flex-one{
-		@value:1;
-		-webkit-box-flex: @value;
-		-moz-box-flex: @value;
-		-o-box-flex: @value;
-		-ms-box-flex: @value;
-		box-flex: @value;
+	.box-flex-one(@val:1){
+		-webkit-box-flex: @val;
+		-moz-box-flex: @val;
+		-o-box-flex: @val;
+		-ms-box-flex: @val;
+		box-flex: @val;
 	}
-	.box-flex-two{
-		@value:2;
-		-webkit-box-flex: @value;
-		-moz-box-flex: @value;
-		-o-box-flex: @value;
-		-ms-box-flex: @value;
-		box-flex: @value;
+	.box-flex-two(@val:2){
+		-webkit-box-flex: @val;
+		-moz-box-flex: @val;
+		-o-box-flex: @val;
+		-ms-box-flex: @val;
+		box-flex: @val;
 	}
 }
 
