unified led effects

--- a/league/extensions/css/vars.less
+++ b/league/extensions/css/vars.less
@@ -47,7 +47,7 @@
 		.s2k-transition(color .2s ease-out);
 	}
 	.led(){
-		.s2k-transition(all 1s);
+        .s2k-transition(~'opacity 1s, left 1s ease-in-out, right 1s ease-in-out');
 	}
 	.page(){
 		.s2k-transition(left .5s ease-out);
